[project]
name = "postgres-sql"
version = "0.1.0"
description = "api interface of postgres"
authors = [
    {name = "cfj521", email = "cfj521@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    fastapi==0.104.1
    uvicorn==0.24.0
    sqlalchemy==2.0.23
    psycopg2-binary==2.9.9
    python-dotenv==1.0.0
    pydantic==2.5.2 
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
