[project]
name = "api-postgres-sql"
version = "0.1.0"
description = "api interface of postgres"
authors = [
    {name = "cfj521", email = "cfj521@hotmail.com"}
]
repository = "https://github.com/cfj521/api_postgres_sql"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary",
    "python-dotenv==1.0.0",
    "pydantic"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
